workloads/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-cloud
  namespace: lfs158
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: task-pv-storage
          mountPath: /var/log/nginx
          subPath: nginx
      - name: admin-sidecar
        image: ealen/echo-server
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: task-pv-storage
          mountPath: /var/log/nginx
          subPath: sidecar
      volumes:
      - name: task-pv-storage
        persistentVolumeClaim:
          claimName: task-pv-claim
