workloads/frontend-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  namespace: lfs158
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: v2
  template:
    metadata:
      labels:
        app: frontend
        version: v2
    spec:
      containers:
      - name: nginx
        image: nginx:stable-alpine
